stylesheet.css
html {
    background-color: rgba(122, 191, 191, 0.5);
}
body {
    background-color: #F2F2F2;
}
h1, h2, h3, h4 {
    text-transform: uppercase;
    font-family: 'Bebas Neue', Arial, sans-serif;
}
h1 {
    font-size: 40px;
    margin: 0 auto;
}
h2 {
    font-size:30px;
}
h3 {
    font-size: 25px;
    text-align: center;
    margin: 0 auto;
}
header {
    display: flex;
    box-shadow: 0px 5px 2px rgba(148, 148, 148, 0.5);
}
menu {
    overflow: hidden;
    max-height: 0;
    transition: max-height .2s ease-out;
}
header label {
    cursor: pointer;
    display: inline-block;
    padding: 28px 20px;
    position: relative;
    user-select: none;
}
p {
    font-family: 'Montserrat', Arial, sans-serif;
    padding: 10px;
    font-weight: medium;
    font-size: 16px;
    margin: 0 auto;
}
dd, li, nav, input {
    font-family: 'Montserrat', Arial, sans-serif;
}
.streetTacosNav a:hover, menu li a:hover {
    background-color: #EB5428;
    color: white;
    transition: all 0.3s ease-in-out;
}
menu {
    margin: 10px;
    padding-left: 20px;
}
menu li {
    padding-top: 5px;
    padding-bottom: 5px;
    list-style-type: square;
}
figure figcaption {
    font-size: 20px;
}
figure h3 {
    font-size: 25px;
    text-align: left;
}
aside {
    padding: 10px;
    background-color: #7ABFBF;
}
aside h2 {
    margin: 0 auto;
    text-align: center;
}
ol li {
    padding-top: 5px;
    padding-bottom: 5px;
}
/* Star Rating */
/*.star-rating {

}*/

@media screen and (min-width: 500px) {
    html {
        margin: 0 auto;
    }
    body {
        width: 414px;
        margin: 0 auto;
        display: grid;
        grid-template-columns: 1fr;
    }
    h1 {
        text-align: center;
    }

    /* 'Street tacos' heading and 4 nav actions and svgs */
    .streetTacosNav ul {
        padding-left: 0px;
        justify-content: space-evenly;
    }
    .streetTacosNav nav ul li a {
        text-decoration: none;
        color: #EB5428;
        font-size: 20px;
        display: flex;
        padding: 0px 10px;
    }
    .streetTacosNav nav ul li {
        list-style-type: none;
        text-align: center;
        text-transform: uppercase;
        font-family: 'Bebas Neue', Arial, sans-serif;
    }
    .streetTacosNav nav ul {
        display: flex;
    }

    /* Main Navigation */
    menu {
        padding: 0px;
        overflow: hidden;
        max-height: 0px;
        transition: max-height .2s ease-out;
    }
    menu#social li {
        font-size: 20px;
    }
    menu li {
        list-style-type: none;
        text-align: center;
        text-transform: uppercase;
        font-family: 'Bebas Neue', Arial, sans-serif;
        position: relative;
        display: flex;
    }
    menu li:hover {
        background-color: #EB5428;
        transition: all 0.3s ease-in-out;
    }
    menu li a {
        text-decoration: none;
        color: #EB5428;
        font-size: 20px;
        text-align: center;
    }    

    /* Main Navigation */
    header label {
        cursor: pointer;
        display: inline-block;
        padding: 28px 20px;
        position: absolute;
        user-select: none;
        padding: 20px;
    }    
    header label span:before {
        top: 5px;
    }
    header label span:after {
        top: -5px;
    }
    header input {
        display: none;
    }
    header input:checked ~ ul {
        max-height: 500px;
    }
    header input:checked ~ label span {
        background: transparent;
    }
    header input:checked ~ label span:before {
        transform: rotate(-45deg);
    }
    header input:checked ~ label span:after {
        transform: rotate(45deg);
    }
    header input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps) span:after {
        top: 0;
    }

    /* Main Image */
    body img {
        width: 100%;
    }

    /* header menu */
    body header menu h2 {
        display: none;
    }
    body header {
        background-color: white;
        display: grid;
        grid-template-columns: 100px 200px 100px;
        order: -1;
    }
    menu {
        overflow: visible;
        position: relative;
        top: 0;
        display: grid;
        grid-template-columns: 1fr;
    }
    menu li, menu a {
        grid-column: 2 / 2;
        background-color: transparent;
    }
    menu li:not(:last-child), menu li:not(:first-child) {
        flex-direction: column;
    }
    header label span, header input {
        position: flex;
    }
    /* header menu - Hamburger SVG */
    .menu-open-button {
        display: flex;
        position: relative;
    }

    /* header menu - first list item and SVG */
    li#home-icon {
        background-color: #EB5428;
        position: relative;
        flex-grow: 4;
        padding-bottom: 12px;
        padding-top: 10px;
        margin-top: -14px;
    }
    li#home-icon a {
        background-color: transparent;
    }

    /* header menu - last list item and svg */
    li#last {
        position: absolute;
        grid-column: 3 / 4;
        top: -18px;
        left: 20px;
    }
    li#last a {
        color: black;
        display: fixed;
        grid-column: 3 / 4;
    }
    li#last a:hover {
        color: white;
        background-color: transparent;
        transition: all 0.3s ease-in-out;
    }
    svg.icon-tabler-user-circle {
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 10px;
        filter: invert(31%) sepia(92%) saturate(5500%) hue-rotate(351deg) brightness(103%) contrast(84%);
    }

    /* Details */
    dl {
        padding: 10px;
        margin: 0 auto;
        display: grid;
        grid-template-columns: 100px 1fr;
    }
    dt {
        font-family: 'Montserrat', Arial, sans-serif;
        font-weight: bold;
    }
    dd {
        text-align: left;
        margin-left: 0px;
        padding: 0px;
        display: inline-flex;
    }

    /* Search Bar and SVG */
    section#search {
        padding-left: 40px;
        padding-right: 40px;
        padding-top: 40px;
        padding-bottom: 20px;
    }
    #search {
        display: flex;
        order: -1;
        flex: 1;
    }
    #search svg {
        background-color: #EB5428;
        padding: 0px 5px 1px 5px;
    }
    input {
        height: 35px;
        border: 2px solid #EB5428;
        flex: 1;
    }

    /* Side Dishes Styling */
    aside {
        padding: 10px;
        margin: 0px;
        display: flex;
        flex-direction: column;
    }
    aside figure {
        display: grid;
        grid-template-columns: 100px 1fr;
        margin-top: 20px;
        margin-right: 10px;
        margin-left: 10px;
        margin-bottom: 20px;
    }
    aside figure img {
        grid-row: 1 / 1;
    }
    aside figure h3 {
        grid-column: 2 / 2;
        grid-row: 1 / 1;
        margin-left: 20px;
    }
    aside figure figcaption {
        grid-row: 1 / 1;
        grid-column: 2 / 2;
        margin: 0px;
        margin-left: 20px;
        margin-top: 30px;
        font-family: 'Montserrat', Arial, sans-serif;
        font-size: 16px;
    }
    aside figure p {
        grid-column: 2 / 2;
        grid-row: 1 / 1;
        padding-right: 0px;
        padding-left: 0px;
        padding-top: 60px;
        padding-bottom: 0px;
        margin-left: 20px;
        font-weight: bold;
    }
    aside figure span {
        grid-column: 2 / 2;
        grid-row: 1 / 1;
        margin-left: 20px;
        margin-top: 85px;
        padding: 0px;
    }
    aside figure span input {
        height: 15px;
    }

    /* Socials List*/
    ul#social {
        list-style-type: none;
        padding-left: 10px;
        padding-right: 10px;
        display: flex;
        align-self: center;
        justify-content: space-between;
        flex-grow: 1;
    }
    ul#social li {
        display: block;
        flex-direction: column;
        align-content: center;
    }
    ul#social li a {
        text-decoration: none;
        text-transform: uppercase;
        font-family: 'Bebas Neue', Arial, sans-serif;
        color: #EB5428;
        display: block;
        font-size: 20px;
    }
    footer {
        padding: 10px;
        background-color: white;
        text-align: center;
        font-size: 20px;
        font-family: 'Bebas Neue', Arial, sans-serif;
        line-height: .9em;
    }
    footer h3 {
        padding-top: 10px;
    }
    footer img {
        width: 200px;
        display: block;
        margin: 0 auto;
        padding-bottom: 20px;
    }
    footer > svg {
        display: none;
    }
}

@media screen and (min-width: 900px) {
    html {
        margin: 0 auto;
    }
    body {
        width: 800px;
        margin: 0 auto;
    }
}

@media screen and (min-width: 1400px) {
    body {
        width: 1400px;
        margin: 0 auto;
    }
}

